--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -11,6 +11,10 @@
     --color-orange-100: oklch(95.4% 0.038 75.164);
     --color-orange-800: oklch(47% 0.157 37.304);
     --color-orange-900: oklch(40.8% 0.123 38.172);
+    --color-yellow-50: oklch(98.7% 0.026 102.212);
+    --color-yellow-100: oklch(97.3% 0.071 103.193);
+    --color-yellow-800: oklch(47.6% 0.114 61.907);
+    --color-yellow-900: oklch(42.1% 0.095 57.708);
     --color-green-50: oklch(98.2% 0.018 155.826);
     --color-green-100: oklch(96.2% 0.044 156.743);
     --color-green-800: oklch(44.8% 0.119 151.328);
@@ -296,6 +300,9 @@
   .border-purple-100 {
     border-color: var(--color-purple-100);
   }
+  .border-yellow-100 {
+    border-color: var(--color-yellow-100);
+  }
   .bg-blue-50 {
     background-color: var(--color-blue-50);
   }
@@ -310,6 +317,9 @@
   }
   .bg-purple-50 {
     background-color: var(--color-purple-50);
+  }
+  .bg-yellow-50 {
+    background-color: var(--color-yellow-50);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -408,6 +418,12 @@
   }
   .text-white {
     color: var(--color-white);
+  }
+  .text-yellow-800 {
+    color: var(--color-yellow-800);
+  }
+  .text-yellow-900 {
+    color: var(--color-yellow-900);
   }
   .italic {
     font-style: italic;
